<resources>
    <string name="app_name">DemoMusicPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="create_task">Create Task</string>
    <string name="show_tasks">Show All Tasks</string>
    <string name="show_task_detail">Show Task Detail</string>
    <string name="search_task">Search a Task</string>
    <string name="get_all_tasks">Get all tasks</string>
</resources>
